--- a/WebInterface/Audio/createPlaylist.html
+++ b/WebInterface/Audio/createPlaylist.html
@@ -207,7 +207,7 @@
 		<div id="main">
 			<div id="songsContainer">
 				<h3>Songs</h3>
-				<button title="Add whole list to queue (only use when you're confident in your system)" style="float: right;" onclick="addWholeSongsToQueue()"><img src="Assets/ic_playlist_add_black.svg"></button>
+				<button title="Add whole list to queue" style="float: right;" onclick="addWholeSongsToQueue()"><img src="Assets/ic_playlist_add_black.svg"></button>
 				<hr>
 				<div id="songs">
 					<div class="ball-scale-multiple"><div></div><div></div><div></div></div>
