--- a/WebInterface/Video/index.html
+++ b/WebInterface/Video/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
+
 <head lang="en">
 
 	<title>Video Stream</title>
 
-	<link rel="shortcut icon" href="Assets/Icons/favicon.ico"/>
-	<link rel="shortcut icon" href="Assets/Icons/favicon.ico" type="image/vnd.microsoft.icon"/>
+	<link rel="shortcut icon" href="Assets/Icons/favicon.ico" />
+	<link rel="shortcut icon" href="Assets/Icons/favicon.ico" type="image/vnd.microsoft.icon" />
 
 	<link rel="apple-touch-icon" sizes="57x57" href="Assets/Icons/apple-icon-57x57.png">
 	<link rel="apple-touch-icon" sizes="60x60" href="Assets/Icons/apple-icon-60x60.png">
@@ -16,7 +17,7 @@
 	<link rel="apple-touch-icon" sizes="144x144" href="Assets/Icons/apple-icon-144x144.png">
 	<link rel="apple-touch-icon" sizes="152x152" href="Assets/Icons/apple-icon-152x152.png">
 	<link rel="apple-touch-icon" sizes="180x180" href="Assets/Icons/apple-icon-180x180.png">
-	<link rel="icon" type="image/png" sizes="192x192"  href="Assets/Icons/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="192x192" href="Assets/Icons/android-icon-192x192.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="Assets/Icons/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="96x96" href="Assets/Icons/favicon-96x96.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="Assets/Icons/favicon-16x16.png">
@@ -26,91 +27,20 @@
 	<!--Let browser know website is optimized for mobile-->
 	<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"/> -->
 	<!-- <meta name="mobile-web-app-capable" content="yes"/> -->
-	<meta name="theme-color" content="#16a085"/>
+	<meta name="theme-color" content="#16a085" />
 	<meta name="msapplication-TileColor" content="#16a085">
-	<meta name="msapplication-navbutton-color" content="#16a085"/>
-	<meta name="apple-mobile-web-app-status-bar-style" content="#16a085"/>
+	<meta name="msapplication-navbutton-color" content="#16a085" />
+	<meta name="apple-mobile-web-app-status-bar-style" content="#16a085" />
 
-	<link href="all.css" rel="stylesheet" type="text/css" media="screen"/>
-	<link href="main.css" rel="stylesheet" type="text/css" media="screen"/>
-	<link href="seekbarStyle.css" rel="stylesheet" type="text/css" media="screen"/>
+	<link href="all.css" rel="stylesheet" type="text/css" media="screen" />
+	<link href="main.css" rel="stylesheet" type="text/css" media="screen" />
+	<link href="seekbarStyle.css" rel="stylesheet" type="text/css" media="screen" />
 
 	<script type="text/javascript" src="main.js"></script>
 	<script type="text/javascript" src="queueAndDragHandler.js"></script>
 
-	<style type="text/css">
-		#overflow-menu {
-			top: 50px;
-			right: 1%;
-			width: 150px;
-			display: none;
-			z-index: 100000;
-			position: absolute;
-			background-color: white;
-			box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
-		}
-
-		#overflow-menu button {
-			width: 100%;
-			border: none;
-			padding: 10px;
-			height: initial;
-			cursor: pointer;
-			position: initial;
-			background-color: transparent;
-			transition: background-color .3s ease;
-		}
-
-		header > div:last-child {
-			right: 0;
-			padding: 0;
-			margin: 0 20px;
-			position: absolute;
-		}
-
-		header > div:last-child > button {
-			left: unset;
-			margin-left: 10px;
-			position: relative;
-		}
-
-		main #queueWrapper > div#queueBtnHolder {
-			width: 40px;
-			float: left;
-			transform: translateY(-40%);
-		}
-
-		main #queueWrapper > div#queueBtnHolder > button {
-			width: 40px;
-			height: 40px;
-			border: none;
-			cursor: pointer;
-			position: relative;
-			border-radius: 100%;
-			background-color: transparent;
-		}
-
-		main #queueWrapper > div#queueBtnHolder > button:before {
-			top: 0;
-			left: 0;
-			opacity: 0;
-			width: 100%;
-			height: 100%;
-			content: ' ';
-			display: block;
-			position: absolute;
-			border-radius: 100%;
-			will-change: opacity;
-			transition: opacity 0.3s ease;
-			background-color: rgba(0, 0, 0, 0.3);
-		}
-
-		main #queueWrapper > div#queueBtnHolder > button:hover:before {
-			opacity: 1;
-		}
-	</style>
-
 </head>
+
 <body>
 
 	<div id="overflow-menu">
@@ -119,9 +49,12 @@
 
 	<header>
 		<div><button title="Go back" id="back"><img src="/Assets/ic_arrow_back_white.svg"></button></div>
-		<div><h1>Videos</h1></div>
 		<div>
-			<button title="Add all to queue" id="add-all-queue-btn"><img src="/Assets/ic_playlist_add_white.svg"></button>
+			<h1>Videos</h1>
+		</div>
+		<div>
+			<button title="Add all to queue" id="add-all-queue-btn"><img
+					src="/Assets/ic_playlist_add_white.svg"></button>
 			<button title="Overflow menu" id="overflow-btn"><img src="/Assets/ic_more_vert_white.svg"></button>
 		</div>
 	</header>
@@ -165,26 +98,39 @@
 					<video></video>
 
 					<div id="controls">
-						<div style="float: left">
-							<button title="play/pause video" id="playPause"><img src="Assets/ic_play_arrow_white.svg"></button>
+						<div>
+							<button title="play/pause video" id="playPause">
+								<img src="Assets/ic_play_arrow_white.svg">
+							</button>
 						</div>
 
-						<div style="width: 69%; display: inline-block;">
+						<div>
 							<span id="time-start">00:00</span>
-							<input type="range" value="0" min="0" max="100" id="seekBar"/>
+							<input type="range" value="0" min="0" max="100" id="seekBar" />
 							<span id="time-end">00:00</span>
 						</div>
 
-						<div style="float: right">
-							<button title="Enable / disable Picture-In-Picture" id="pip-toggle" disabled style="display: none"><img src="Assets/ic_picture_in_picture_white.svg"></button>
-							<button title="More settings" id="settings-toggle"><img src="Assets/ic_settings_white.svg"></button>
-							<button title="Fullscreen toggle" id="fullScreen"><img src="Assets/ic_fullscreen_white.svg"></button>
+						<div>
+							<button title="Enable / disable Picture-In-Picture" id="pip-toggle" disabled
+								style="display: none">
+								<img src="Assets/ic_picture_in_picture_white.svg">
+							</button>
+							<button title="More settings" id="settings-toggle">
+								<img src="Assets/ic_settings_white.svg">
+							</button>
+							<button title="Fullscreen toggle" id="fullScreen">
+								<img src="Assets/ic_fullscreen_white.svg">
+							</button>
 						</div>
 					</div>
 				</div>
 
 				<div id="loader">
-					<div class="ball-scale-multiple"><div></div><div></div><div></div></div>
+					<div class="ball-scale-multiple">
+						<div></div>
+						<div></div>
+						<div></div>
+					</div>
 				</div>
 			</div>
 
@@ -193,9 +139,12 @@
 			<div id="queueWrapper">
 				<h4>Queue</h4>
 				<div id="queueBtnHolder">
-					<button onclick="clearQueue()" title="Clear queue"><img src="/Assets/ic_clear_all_black.svg"></button>
-					<button onclick="shuffleQueue()" title="Shuffle queue"><img src="/Assets/ic_shuffle_black.svg"></button>
-					<button onclick="saveQueueToTmp()" title="Save queue"><img src="/Assets/ic_save_black.svg"/></button>
+					<button onclick="clearQueue()" title="Clear queue"><img
+							src="/Assets/ic_clear_all_black.svg"></button>
+					<button onclick="shuffleQueue()" title="Shuffle queue"><img
+							src="/Assets/ic_shuffle_black.svg"></button>
+					<button onclick="saveQueueToTmp()" title="Save queue"><img
+							src="/Assets/ic_save_black.svg" /></button>
 				</div>
 				<div id="queue" ondrop="drop(event)" ondragover="allowDrop(event)">
 					<i>Queue is empty</i>
@@ -209,10 +158,15 @@
 
 		<div id="videos">
 			<div id="loaderWrapper">
-				<div style="width: 60px; height: 60px; 	transform: translate(150%, 20px);" class="ball-scale-multiple"><div style="left: 0"></div><div style="left: 0"></div><div style="left: 0"></div></div>
+				<div style="width: 60px; height: 60px; 	transform: translate(150%, 20px);" class="ball-scale-multiple">
+					<div style="left: 0"></div>
+					<div style="left: 0"></div>
+					<div style="left: 0"></div>
+				</div>
 			</div>
 		</div>
 	</main>
 
 </body>
+
 </html>
