--- a/WebInterface/Video/index.html
+++ b/WebInterface/Video/index.html
@@ -158,10 +158,10 @@
 
 		<div id="videos">
 			<div id="loaderWrapper">
-				<div style="width: 60px; height: 60px; 	transform: translate(150%, 20px);" class="ball-scale-multiple">
-					<div style="left: 0"></div>
-					<div style="left: 0"></div>
-					<div style="left: 0"></div>
+				<div class="ball-scale-multiple">
+					<div></div>
+					<div></div>
+					<div></div>
 				</div>
 			</div>
 		</div>
